[package]
name = "quaver-bio"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-loki = "0.2"

lazy_static = "1.5"

tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

regex = "1.10"

anyhow = "1.0"
thiserror = "1.0"
